# prysm

./: CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  INTEROP.md  WORKSPACE  deps.bzl  go.mod  go.sum
beacon-chain/blockchain/: BUILD.bazel  log.go  process_block.go  process_block_helpers.go  process_block_test.go  receive_block.go  receive_block_test.go
beacon-chain/cache/: BUILD.bazel  tracked_validators.go  tracked_validators_test.go
beacon-chain/das/: availability.go
beacon-chain/execution/: BUILD.bazel  engine_client.go  engine_client_test.go
beacon-chain/monitor/: process_attestation.go  service.go
beacon-chain/node/: config.go
beacon-chain/rpc/: endpoints.go  endpoints_test.go
beacon-chain/sync/: blobs_test.go  decode_pubsub_test.go  (+13 more)
beacon-chain/sync/checkpoint/: BUILD.bazel  api.go  api_test.go  weak-subjectivity.go  weak-subjectivity_test.go
changelog/: dB2510_processslotspan.md  james-prysm_blockv2-cognit.md  james-prysm_deprecate-apis-for-electra.md  james-prysm_dynamic-max-blobs.md  james-prysm_electra-e2e.md  james-prysm_electra-eth1voting.md  james-prysm_fix-block-api-electra.md  james-prysm_fix-builder-post-header.md  james-prysm_improve-execution-request-errors.md  james-prysm_nil-check-to-consensus.md  james-prysm_proposer-settings-readability.md  james-prysm_web3signer-electra-e2e.md  kasey_blobs-by-epoch.md  kasey_refactor-checkpoint-download.md  kasey_windows-layout-fix.md  manu_fix_dependencies_doc.md  manu_remove_fulu_state_block.md  manu_services_start_log_removal.md  manu_tracked_validators_ttl.md  nisdas_add_deposit_request_testing.md  nisdas_enable_multiclient_e2e_electra.md  nisdas_fix_blobs_by_range.md  nisdas_fix_capabilites.md  nisdas_fix_deposit_active_evaluator.md  nisdas_fix_mutating_blob_mask.md  nisdas_fix_process_deposit_evaluator.md  nisdas_increase_electra_limits.md  nisdas_log_execution_requests.md  nisdas_remove_useless_assignment.md  nisdas_update_blst.md  nisdas_update_go_libp2p_pubsub.md  potuz_overflow_slashings.md  potuz_rpc_handler_log.md  pvl_otel.md  pvl_trace_validator_sign_requests.md  pvl_v5.3.0.md  radek_add-missing-config-values.md  radek_electra-events-api.md  radek_electra-monitor.md  radek_electra-nits.md  (+15 more)
proto/: ssz_proto_library.bzl
runtime/: service_registry.go
(+169 files in other folders)
